<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.aboutMe.AboutMeFragment">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:id="@+id/poster"
                    android:src="@drawable/back_about_me"
                    app:layout_constraintDimensionRatio="16^9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.056"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/poster"
                    android:src="@drawable/icon_avatar" />

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toTopOf="@+id/avatar"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/about_me_full_name"/>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@id/full_name"
                    app:layout_constraintTop_toBottomOf="@+id/full_name"
                    android:textSize="18sp"
                    android:text="@string/about_me_status"/>

                <TextView
                    android:id="@+id/degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/status"
                    app:layout_constraintTop_toTopOf="@+id/status"
                    android:textSize="18sp"
                    android:text="@string/about_me_drg"/>

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="@+id/status"
                    app:layout_constraintTop_toBottomOf="@+id/status"
                    android:textSize="18sp"
                    android:text="@string/about_me_year_drg"/>
                <TextView
                    android:id="@+id/year_dgr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/year"
                    app:layout_constraintStart_toStartOf="@+id/degree"
                    android:textSize="18sp"
                    android:text="@string/about_me_year_dgr_one"/>
                <TextView
                    android:id="@+id/overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/avatar"
                    app:layout_constraintStart_toStartOf="@+id/avatar"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/about_me_title_about"/>
                <TextView
                    android:id="@+id/overview_text"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toBottomOf="@+id/overview_title"
                    android:layout_marginHorizontal="14dp"
                    android:textSize="18sp"
                    android:text="@string/about_me_title_text"/>


        </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>

